complate index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="wrap">
-        <div class="ctx-body">
+        <div class="ctx-body scroll">
             <!-- 轮播banner -->
             <div class="swiper-wrap">
                 <div class="swiper-container">
@@ -77,36 +77,135 @@
                         </li>
                     </ul>
                 </div>
+                <!-- 瀑布流 -->
+                <div class="fall-wrap">
+                    <div class="fall-head">
+                        <span class="fall-name">
+                            电影大片
+                        </span>
+                        <a class="more">更多 ></a>
+                    </div>
+                    <ul class="fall-body">
+                        <li>
+                            <a href="#" class="film-img-m1"></a>
+                            <p class="film-name">美日海上大决战！</p>
+                        </li>
+                        <li>
+                            <a href="#" class="film-img-m2"></a>
+                            <p class="film-name">畅游Naniya的奇幻世界</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="fall-wrap">
+                    <div class="fall-head">
+                        <span class="fall-name">
+                            热播剧场
+                        </span>
+                        <a class="more">更多 ></a>
+                    </div>
+                    <ul class="fall-body">
+                        <li>
+                            <a href="#" class="film-img-m3"></a>
+                            <p class="film-name">佟丽娅被爱情冲晕了头脑</p>
+                        </li>
+                        <li>
+                            <a href="#" class="film-img-m4"></a>
+                            <p class="film-name">王源当爹是梦境还是现实？</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="fall-wrap">
+                    <div class="fall-head">
+                        <span class="fall-name">
+                            人气综艺
+                        </span>
+                        <a class="more">更多 ></a>
+                    </div>
+                    <ul class="fall-body">
+                        <li>
+                            <a href="#" class="film-img-m5"></a>
+                            <p class="film-name">郭麒麟教学吃甘蔗翻车</p>
+                        </li>
+                        <li>
+                            <a href="#" class="film-img-m6"></a>
+                            <p class="film-name">王琳一秒变鬼畜雪姨</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="fall-wrap">
+                    <div class="fall-head">
+                        <span class="fall-name">
+                            动漫次元
+                        </span>
+                        <a class="more">更多 ></a>
+                    </div>
+                    <ul class="fall-body">
+                        <li>
+                            <a href="#" class="film-img-m7"></a>
+                            <p class="film-name">斗罗大陆3龙王传说</p>
+                        </li>
+                        <li>
+                            <a href="#" class="film-img-m8"></a>
+                            <p class="film-name">逆天邪神第一季来袭</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="fall-wrap">
+                    <div class="fall-head">
+                        <span class="fall-name">
+                            快乐少儿
+                        </span>
+                        <a class="more">更多 ></a>
+                    </div>
+                    <ul class="fall-body">
+                        <li>
+                            <a href="#" class="film-img-m9"></a>
+                            <p class="film-name">喜羊羊与灰太狼之奇趣外星羊</p>
+                        </li>
+                        <li>
+                            <a href="#" class="film-img-m10"></a>
+                            <p class="film-name">逆天邪神第一季来袭</p>
+                        </li>
+                    </ul>
+                </div>  
+                <!-- 到底了 -->
+                <div class="end">
+                    <img src="img/icon/end-icon.png">
+                    <p>- 到底了 -</p>
+                </div>
             </div>
         </div>
         <div class="ctx-footer">
             <ul>
                 <li>
-                    <a href="#">
-                        <i class="recommend active"></i>
+                    <a href="#" class="active">
+                        <i class="recommend"></i>
                         <span class="title">推荐</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="recommend"></i>
+                        <i class="movies"></i>
                         <span class="title">影视</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="recommend"></i>
+                        <i class="member"></i>
                         <span class="title">会员</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="recommend"></i>
+                        <i class="my"></i>
                         <span class="title">我的</span>
                     </a>
                 </li>
             </ul>
         </div>
+        <a href="#" class="advertisement">
+            <img src="img/icon/advertisement-icon.png">
+        </a>
     </div>
 </body>
 <!-- swiper.js -->
