--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
 </body>
 <!-- swiper.js -->
 <script src="plugins/swiper/swiper.min.js"></script>
+<!-- jquery.js -->
+<script src="plugins/Jquery/jquery.min-2.2.4.js"></script>
 <!-- index.js -->
 <script src="js/index.js"></script>
 </html>
