--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="wrap">
-        <div class="ctx-body scroll">
+        <div class="ctx-body">
             <!-- 轮播banner -->
             <div class="swiper-wrap">
                 <div class="swiper-container">
@@ -212,6 +212,8 @@
 <script src="plugins/swiper/swiper.min.js"></script>
 <!-- jquery.js -->
 <script src="plugins/Jquery/jquery.min-2.2.4.js"></script>
+<!-- base.js -->
+<!-- <script src="js/base.js"></script> -->
 <!-- index.js -->
 <script src="js/index.js"></script>
 </html>
