--- a/index.html
+++ b/index.html
@@ -40,37 +40,37 @@
                 <div class="nav-tab-wrap">
                     <ul class="nav-tabs">
                         <li class="tab">
-                            <a href="#">
+                            <a href="movies.html">
                                 <i class="film"></i>
                                 <span>电影</span>
                             </a>
                         </li>
                         <li class="tab">
-                            <a href="#">
+                            <a href="movies.html">
                                 <i class="drama"></i>
                                 <span>电视剧</span>
                             </a>
                         </li>
                         <li class="tab">
-                            <a href="#">
+                            <a href="movies.html">
                                 <i class="variety"></i>
                                 <span>综艺</span>
                             </a>
                         </li>
                         <li class="tab">
-                            <a href="#">
+                            <a href="movies.html">
                                 <i class="comic"></i>
                                 <span>动漫</span>
                             </a>
                         </li>
                         <li class="tab">
-                            <a href="#">
+                            <a href="movies.html">
                                 <i class="child"></i>
                                 <span>少儿</span>
                             </a>
                         </li>
                         <li class="tab">
-                            <a href="#">
+                            <a href="movies.html">
                                 <i class="film"></i>
                                 <span>电影</span>
                             </a>
@@ -83,7 +83,7 @@
                         <span class="fall-name">
                             电影大片
                         </span>
-                        <a class="more">更多 ></a>
+                        <a href="movies.html" class="more">更多 ></a>
                     </div>
                     <ul class="fall-body">
                         <li>
@@ -101,7 +101,7 @@
                         <span class="fall-name">
                             热播剧场
                         </span>
-                        <a class="more">更多 ></a>
+                        <a href="movies.html" class="more">更多 ></a>
                     </div>
                     <ul class="fall-body">
                         <li>
@@ -119,7 +119,7 @@
                         <span class="fall-name">
                             人气综艺
                         </span>
-                        <a class="more">更多 ></a>
+                        <a href="movies.html" class="more">更多 ></a>
                     </div>
                     <ul class="fall-body">
                         <li>
@@ -137,7 +137,7 @@
                         <span class="fall-name">
                             动漫次元
                         </span>
-                        <a class="more">更多 ></a>
+                        <a href="movies.html" class="more">更多 ></a>
                     </div>
                     <ul class="fall-body">
                         <li>
@@ -155,7 +155,7 @@
                         <span class="fall-name">
                             快乐少儿
                         </span>
-                        <a class="more">更多 ></a>
+                        <a href="movies.html" class="more">更多 ></a>
                     </div>
                     <ul class="fall-body">
                         <li>
@@ -178,13 +178,13 @@
         <div class="ctx-footer">
             <ul>
                 <li>
-                    <a href="#" class="active">
+                    <a href="index.html" class="active">
                         <i class="recommend"></i>
                         <span class="title">推荐</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="movies.html">
                         <i class="movies"></i>
                         <span class="title">影视</span>
                     </a>
@@ -196,7 +196,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="my.html">
                         <i class="my"></i>
                         <span class="title">我的</span>
                     </a>
