--- a/movies.html
+++ b/movies.html
@@ -238,13 +238,13 @@
         <div class="ctx-footer">
             <ul>
                 <li>
-                    <a href="#" class="active">
+                    <a href="index.html">
                         <i class="recommend"></i>
                         <span class="title">推荐</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="movies.html" class="active">
                         <i class="movies"></i>
                         <span class="title">影视</span>
                     </a>
@@ -256,7 +256,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="my.html">
                         <i class="my"></i>
                         <span class="title">我的</span>
                     </a>
