--- a/my-unbound.html
+++ b/my-unbound.html
@@ -17,9 +17,9 @@
         <div class="ctx-body">
             <div class="accountInfo-box">
                 <div class="status">
-                    <i class="boundStatus bound"></i>
-                    <span class="status-text">绑定设备号：KD2398****5678</span>
-                    <i class="hiddenAccount"></i>
+                    <i class="boundStatus unbound"></i>
+                    <span class="status-text">您未绑定帐号，请先绑定帐号~</span>
+                    <button type="button" class="status-btn">去绑定 ></button>
                 </div>
             </div>
             <div class="main">
